fix table align "clientes"

--- a/general.css
+++ b/general.css
@@ -177,7 +177,8 @@ footer hr {
     width: 100%; /* Ancho deseado */
     margin: 0 auto; /* Centrar horizontalmente */
     background-color: black; /* Color de fondo si es necesario */
-}
+    justify-content: center;
+    }
 
 .container p, .container ol, .container ul {
     width: 100%; /* Asegura que todos los elementos de texto ocupen el ancho completo */
@@ -207,11 +208,12 @@ footer hr {
 }
 
 table tbody{
-    margin: auto;
+    margin: 0 auto;
     width: 100%;
     max-width: 100%;
     table-layout: fixed;
     border-collapse: collapse;
+    justify-content: center;
 
 }
 
